--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,25 +1,129 @@
+/* Header section */
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 170px 8px 200px;
+    box-shadow: 0 8px 4px rgb(119 217 255 / 20%);
+    background-color: white;
+}
+
+nav {
+}
+
+.brand {
+    height: 46px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.brand__logo {
+    width: 46px;
+    height: 100%;
+    object-fit: cover;
+}
+
+.brand__text {
+    font-size: 2rem;
+    margin-left: 16px;
+    color: var(--dark_blue_color);
+    font-weight: 600;
+}
+
+.nav_pc_container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.nav_pc_item__link {
+    padding: 20px 30px;
+    font-size: 2rem;
+}
+
+.nav_pc_item__link {
+    color: var(--dark_blue_color);
+    font-weight: 600;
+}
+
+.nav_pc_item__link:hover {
+    opacity: 0.7;
+}
+
+/* Main content */
+.homepage_content {
+    display: flex;
+    justify-content: space-between;
+    margin: 140px 190px;
+    align-items: center
+}
+
+.homepage_content__intro {
+    width: 46%;
+    text-align: center;
+}
+
+.homepage_content__intro p {
+    font-size: 2rem;
+    font-weight: 500;
+    color: var(--dark_blue_color);
+}
+
+.dynamic_txt {
+    color: var(--orange_color);
+}
+
+.homepage_content__intro h2 {
+    font-size: 3.6rem;
+    width: 100%;
+    color: #265edb;
+}
+
+.homepage_content__user_roles {
+    display: flex;
+    justify-content: space-between;
 
 }
 
-.header_container {
+.homepage_content__user_roles a {
+    font-size: 2.2rem;
+    padding: 20px 30px;
+    border-radius: 50px;
+    width: 30%;
+    display: inline-block;
+    font-weight: 600;
+}
+
+.homepage_content__socials {
 
 }
 
-.header_logo {
-
+.homepage_content__socials a i {
+    font-size: 2.4rem;
+    color: gray;
+    padding: 30px 20px 16px;
 }
 
-.header_logo img {
-
+.homepage_content__socials a i:hover {
+    opacity: 0.7;
 }
 
-.header_nav_pc {
-
-    
+.homepage_content__img {
+    position: relative;
+    width: 48%;
+    height: 45vh;
 }
 
-.header_nav_pc__list {
-
+.homepage_content__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
 }
 
+.homepage_content__img img:nth-child(2) {
+    position: absolute;
+    top: 30px;
+    z-index: 2;
+    left: 10%;
+}
