--- a/assets/css/shipper.css
+++ b/assets/css/shipper.css
@@ -198,7 +198,7 @@ h2{
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: #30dd8a;
+  background-color: rgb(0 182 121);
   color: white;
 }
 
@@ -292,14 +292,14 @@ footer{
 }
 
 .wrapper ul li a:hover {
-  color: hsl(142, 57%, 53%);
+  color: #30dd8a ;
 }
 
 .wrapper ul li .tooltip {
   position: absolute;
   top: -5px;
   left: 40px;
-  background: #30dd8a;
+  background: #bfda71;
   width: 115px;
   padding: 10px;
   border-radius: 50px;
